//login.js
output.login =  {
  email: 'email',
  password: 'password',
  loginBtn: 'login-button',
  addressSelection: 'Selecione seu endereço...'
}